[package]
name = "ustr"
version = "1.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "Fast, FFI-friendly string interning."
documentation = "https://docs.rs/ustr"
repository = "https://github.com/anderslanglands/ustr"
readme = "README.md"
keywords = ["string", "interning", "FFI"]
categories = ["caching", "data-structures"]

[badges]
travis-ci = { repository = "anderslanglands/ustr", branch = "master" }

[features]
default = []
## Enables several functions that allow interaction with the global string
## cache.
cache_access = []
## Enables serializing/deserializing the global string cache.
serde = ["dep:serde"]

[dependencies]
ahash = { version = "0.8", default-features = false }
byteorder = "1.5"
document-features = "0.2"
lazy_static = "1.5"
parking_lot = "0.12"
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.4"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
libc = "0.2"
serde_json = "1"
string-interner = "0.13"
string_cache = "0.8"

[[bench]]
name = "creation"
harness = false

[package.metadata.docs.rs]
all-features = true
